k8s/rails-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: rails
        image: <DOCKERHUB_USERNAME>/myapp:latest
        ports:
          - containerPort: 3000
