k8s/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails
spec:
  selector:
    app: rails
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
